# DublyajnayaRecord

./: .env.example  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dubrecord/: main.py
src/dubrecord/dp/: __init__.py  base.py  start.py
src/dubrecord/filters/: __init__.py  base.py  mention.py
src/dubrecord/settings/: __init__.py  inject.py  logger.py  settings.py
src/dubrecord/startup/: __init__.py  polling.py  webhook.py
