[project]
name = "dubrecord"
version = "0.1.0"
description = "Бот для записи дубляжников на запись. Онли пуш в какой беседе."
authors = [{name = "Aleksey Baev",email = "git@sweetdogs.ru"}]
maintainers = [{name = "Aleksey Baev", email = "git@sweetdogs.ru"}]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "kurigram>=2.2.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
opt = [
    "uvloop>=0.21.0",
]


[tool.ruff]
line-length = 140

[tool.ruff.lint]
unfixable = ["B"]
select = ["T20","B","F","E","I","UP","N","ANN","Q","COM","ERA","ASYNC","BLE","FIX","ISC","PIE","PTH"]
ignore = ["ANN002", "ANN003", "ANN204"]


[project.scripts]
start = "dubrecord.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubrecord"]
